--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SleepWell AI – Prediksi & Edukasi Kesehatan Tidur Anda</title>
   <link rel="icon" href="img/logo-sinyal-tenang.png" />
-  <link rel="stylesheet" href="style/index.css" />
+  <link rel="stylesheet" href="./style/index.css" />
 </head>
 <body>
 
