--- a/sign-up.html
+++ b/sign-up.html
@@ -9,7 +9,7 @@
 <body>
   <div class="register-container">
     <div class="register-card">
-      <img src="img/logo-sinyal-tenang.png" alt="SleepWell Logo" class="logo">
+      <img src="style/img/logo-sinyal-tenang.png" alt="SleepWell Logo" class="logo">
       <h2 class="title">Buat Akun SleepWell</h2>
       <form id="signupForm" autocomplete="off">
         <div class="form-group">
