--- a/login-user.html
+++ b/login-user.html
@@ -9,7 +9,7 @@
 <body>
   <div class="login-container">
     <div class="login-card">
-      <img src="img/logo-sinyal-tenang.png" alt="SleepWell Logo" class="logo">
+      <img src="style/img/logo-sinyal-tenang.png" alt="SleepWell Logo" class="logo">
       <h2 class="title">Login SleepWell</h2>
       <form id="loginForm" autocomplete="off">
         <div class="form-group">
