--- a/main-menu.html
+++ b/main-menu.html
@@ -9,7 +9,7 @@
 <body>
   <div class="mainmenu-container">
     <div class="mainmenu-card">
-      <img src="img/logo-sinyal-tenang.png" alt="SleepWell Logo" class="logo">
+      <img src="style/img/logo-sinyal-tenang.png" alt="SleepWell Logo" class="logo">
       <h2 class="title">Menu Utama SleepWell</h2>
       <div id="userWelcome" class="user-welcome">Memuat...</div>
       <div class="menu-btn-group">
