--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <nav>
   <div class="container flex navbar">
     <div class="flex" style="gap:.7rem">
-      <img src="img/logo-sinyal-tenang.png" style="width:38px;border-radius:.6rem;" alt="Logo SleepWell"/>
+      <img src="style/img/logo-sinyal-tenang.png" style="width:38px;border-radius:.6rem;" alt="Logo SleepWell"/>
       <span class="navbar-logo">SleepWell <span style="color:var(--blue)">AI</span></span>
     </div>
     <div class="navbar-links">
