--- a/hasil-prediksi.html
+++ b/hasil-prediksi.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <title>Hasil Prediksi Tidur</title>
   <meta charset="UTF-8">
+  <title>Hasil Prediksi Tidur • SleepWell AI</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <h2>Hasil Prediksi Tidur Anda</h2>
-  
-  <!-- Loader -->
-  <div id="loader" style="display:none; margin-bottom:15px;">⏳ Memproses prediksi, mohon tunggu...</div>
-  
-  <!-- Hasil prediksi utama -->
-  <div id="predictionResult">Memuat...</div>
-  
-  <!-- Tips/deskripsi hasil -->
-  <div id="predictionTips" style="margin-top:10px;"></div>
-  
-  <!-- Saran CBTI / tombol selengkapnya -->
-  <div id="cbtiAdvice" style="margin-top:15px;"></div>
-  
-  <!-- Pesan error update DB -->
-  <div id="dbErrorMsg" style="color:red;margin-top:10px;"></div>
-  
-  <button onclick="window.location.href='form-input.html'">Input Data Baru</button>
-  <button onclick="window.location.href='riwayat.html'">Lihat Riwayat</button>
-  <button onclick="window.location.href='main-menu.html'">Menu Utama</button>
-  
+  <div class="result-container">
+    <div class="result-card">
+      <img src="style/img/logo-sinyal-tenang.png" alt="SleepWell Logo" class="logo">
+      <h2 class="title">Hasil Prediksi Tidur Anda</h2>
+      <div id="loader" class="loader">⏳ Memproses prediksi, mohon tunggu...</div>
+      <div id="predictionResult" class="prediksi-hasil">Memuat...</div>
+      <div id="predictionTips" class="tips-hasil"></div>
+      <div id="cbtiAdvice" class="cbti-advice"></div>
+      <div id="dbErrorMsg" class="db-error"></div>
+      <div class="result-btn-group">
+        <button onclick="window.location.href='form-input.html'" class="btn-main">Input Data Baru</button>
+        <button onclick="window.location.href='riwayat.html'" class="btn-main btn-alt">Lihat Riwayat</button>
+        <button onclick="window.location.href='main-menu.html'" class="btn-main btn-alt">Menu Utama</button>
+      </div>
+    </div>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script>
     // Setup Supabase
@@ -41,7 +37,7 @@
     // Ambil input dari sessionStorage
     const input = JSON.parse(sessionStorage.getItem('sleep_input') || '{}');
     if (!input || !input.gender || !input.age || !input.occupation || !input.bmi_category || !input.Physical_Activity_Level || !input.Stress_Level || !input.Heart_Rate || !input.Daily_Steps || !input.sleep_data_id) {
-      document.getElementById('predictionResult').innerHTML = "<span style='color:red;'>Data tidak lengkap, silakan input ulang.</span>";
+      document.getElementById('predictionResult').innerHTML = "<span style='color:#e11d48;'>Data tidak lengkap, silakan input ulang.</span>";
       setTimeout(() => { window.location.href = "form-input.html"; }, 2000);
     } else {
       // Tampilkan loader
@@ -70,9 +66,9 @@
         // Tampilkan hasil prediksi utama
         document.getElementById('predictionResult').innerHTML =
           `<ul>
-            <li><b>Kualitas Tidur:</b> ${result.quality_of_sleep}</li>
-            <li><b>Durasi Tidur:</b> ${parseFloat(result.sleep_duration).toFixed(1)} jam</li>
-            <li><b>Gangguan Tidur:</b> ${result.sleep_disorder}</li>
+            <li><b>Kualitas Tidur:</b> <span class="nilai">${result.quality_of_sleep}</span></li>
+            <li><b>Durasi Tidur:</b> <span class="nilai">${parseFloat(result.sleep_duration).toFixed(1)} jam</span></li>
+            <li><b>Gangguan Tidur:</b> <span class="nilai">${result.sleep_disorder}</span></li>
           </ul>`;
 
         // Tips & CBTI dinamis
@@ -81,37 +77,37 @@
 
         if (dis === "Insomnia" && q <= 5 && d < 6.5) {
           tips = "Tidur Anda tergolong buruk dengan kemungkinan insomnia akut. Anda butuh intervensi CBT-I intensif, seperti pembatasan waktu di kasur, relaksasi, dan perbaikan rutinitas tidur.";
-          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-insomnia-akut.html\'">Selengkapnya: Panduan CBT-I untuk Insomnia Akut</button>';
+          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-insomnia-akut.html\'" class="btn-cbti">Selengkapnya: Panduan CBT-I untuk Insomnia Akut</button>';
         } else if (dis === "Insomnia" && q <= 5 && d >= 6.5) {
           tips = "Tidur Anda cukup lama tapi kualitas tetap rendah. Mungkin Anda mengalami insomnia dengan masalah persepsi tidur. Disarankan fokus ke CBT-I kognitif untuk memperbaiki pola pikir tentang tidur.";
-          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-insomnia-kognitif.html\'">Selengkapnya: CBT-I Kognitif untuk Insomnia</button>';
+          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-insomnia-kognitif.html\'" class="btn-cbti">Selengkapnya: CBT-I Kognitif untuk Insomnia</button>';
         } else if (dis === "Insomnia" && q >= 6 && d < 6.5) {
           tips = "Tidur Anda kurang durasi, meski kualitas cukup baik. Cobalah latihan sleep restriction & stimulus control agar waktu tidur lebih efektif.";
-          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-insomnia-sleeprestriction.html\'">Selengkapnya: CBT-I Sleep Restriction</button>';
+          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-insomnia-sleeprestriction.html\'" class="btn-cbti">Selengkapnya: CBT-I Sleep Restriction</button>';
         } else if (dis === "Insomnia" && q >= 6 && d >= 6.5) {
           tips = "Insomnia Anda mulai terkendali. Fokus pada pemeliharaan pola tidur sehat dan cegah kambuhnya insomnia dengan teknik relaksasi ringan.";
-          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-insomnia-maintenance.html\'">Selengkapnya: CBT-I Maintenance</button>';
+          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-insomnia-maintenance.html\'" class="btn-cbti">Selengkapnya: CBT-I Maintenance</button>';
         } else if (dis === "Sleep Apnea" && d < 6.5) {
           tips = "Anda memiliki risiko sleep apnea dan durasi tidur pendek. Disarankan evaluasi medis, posisi tidur miring, serta menjaga berat badan.";
-          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-apnea-akut.html\'">Selengkapnya: Tips Apnea & Kurang Tidur</button>';
+          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-apnea-akut.html\'" class="btn-cbti">Selengkapnya: Tips Apnea & Kurang Tidur</button>';
         } else if (dis === "Sleep Apnea" && d >= 6.5) {
           tips = "Sleep apnea terdeteksi, namun durasi tidur sudah cukup. Tingkatkan sleep hygiene dan konsultasi ke dokter jika sering terbangun atau mendengkur keras.";
-          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-apnea-sleephygiene.html\'">Selengkapnya: Sleep Hygiene untuk Apnea</button>';
+          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-apnea-sleephygiene.html\'" class="btn-cbti">Selengkapnya: Sleep Hygiene untuk Apnea</button>';
         } else if (dis === "None" && q <= 5 && d < 6.5) {
           tips = "Tidur Anda kurang dan kualitasnya rendah, meski tanpa gangguan spesifik. Coba perbaiki sleep hygiene dan lakukan latihan relaksasi sebelum tidur.";
-          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-hygiene-buruk.html\'">Selengkapnya: Hygiene & Relaksasi</button>';
+          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-hygiene-buruk.html\'" class="btn-cbti">Selengkapnya: Hygiene & Relaksasi</button>';
         } else if (dis === "None" && q >= 8 && d >= 6.5) {
           tips = "Selamat! Kualitas dan durasi tidur Anda sangat baik. Pertahankan kebiasaan sehat ini agar tetap optimal.";
-          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-pemeliharaan.html\'">Tips Lanjut: Pemeliharaan Tidur Baik</button>';
+          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-pemeliharaan.html\'" class="btn-cbti">Tips Lanjut: Pemeliharaan Tidur Baik</button>';
         } else if (dis === "None" && q >= 6 && d < 6.5) {
           tips = "Kualitas tidur Anda cukup baik, tapi durasinya masih kurang. Usahakan untuk tidur sedikit lebih lama dan atur waktu tidur-bangun yang konsisten.";
-          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-tidurpendek.html\'">Tips Menambah Durasi Tidur</button>';
+          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-tidurpendek.html\'" class="btn-cbti">Tips Menambah Durasi Tidur</button>';
         } else if (dis === "None" && q <= 5 && d >= 8) {
           tips = "Durasi tidur Anda berlebihan, tapi kualitasnya rendah (hypersomnia). Evaluasi kebiasaan tidur Anda dan hindari tidur siang terlalu lama.";
-          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-hypersomnia.html\'">CBT-I untuk Hypersomnia</button>';
+          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-hypersomnia.html\'" class="btn-cbti">CBT-I untuk Hypersomnia</button>';
         } else {
           tips = "Untuk hasil tidur Anda, disarankan cek tips umum menjaga pola tidur sehat agar kualitas meningkat.";
-          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-umum.html\'">Selengkapnya: Tips Umum Tidur Sehat</button>';
+          cbtLink = '<button onclick="window.location.href=\'cbti/cbt-umum.html\'" class="btn-cbti">Selengkapnya: Tips Umum Tidur Sehat</button>';
         }
 
         document.getElementById('predictionTips').innerText = tips;
@@ -134,9 +130,171 @@
       })
       .catch(err => {
         document.getElementById('loader').style.display = 'none';
-        document.getElementById('predictionResult').innerHTML = "<span style='color:red;'>Gagal memproses prediksi: " + err + "</span>";
+        document.getElementById('predictionResult').innerHTML = "<span style='color:#e11d48;'>Gagal memproses prediksi: " + err + "</span>";
       });
     }
   </script>
+  <style>
+    :root {
+      --primary: #6751ef;
+      --primary-dark: #4a3ec8;
+      --blue: #2563eb;
+      --background: #f5f7fa;
+      --card-bg: #fff;
+      --gray: #eef2fe;
+      --border: #e5e7eb;
+      --danger: #e11d48;
+      --radius: 18px;
+    }
+    html, body {
+      min-height: 100vh;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #e0e7ff 0%, #f6dfff 100%);
+      font-family: 'Inter', 'Segoe UI', Arial, sans-serif;
+    }
+    .result-container {
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(255,255,255,0.10);
+    }
+    .result-card {
+      background: var(--card-bg);
+      border-radius: var(--radius);
+      box-shadow: 0 8px 32px rgba(66,71,112,0.13);
+      padding: 30px 28px 20px 28px;
+      max-width: 420px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      border: 1.5px solid var(--border);
+      transition: box-shadow 0.2s;
+    }
+    .result-card:hover {
+      box-shadow: 0 12px 36px rgba(103,81,239,0.15);
+    }
+    .logo {
+      width: 56px;
+      height: 56px;
+      object-fit: contain;
+      margin-bottom: 15px;
+    }
+    .title {
+      font-size: 1.35rem;
+      font-weight: 700;
+      color: var(--primary);
+      margin-bottom: 14px;
+      text-align: center;
+      letter-spacing: .5px;
+    }
+    .loader {
+      display: none;
+      margin-bottom: 15px;
+      color: #555;
+      font-size: .98rem;
+      text-align: center;
+    }
+    .prediksi-hasil ul {
+      margin: 0 0 6px 0;
+      padding-left: 16px;
+    }
+    .prediksi-hasil li {
+      font-size: 1.09rem;
+      margin-bottom: 5px;
+      color: #333;
+      line-height: 1.65;
+    }
+    .nilai {
+      color: var(--primary);
+      font-weight: 600;
+      font-size: 1.09em;
+      margin-left: 4px;
+    }
+    .tips-hasil {
+      font-size: .98rem;
+      color: #444;
+      margin-top: 2px;
+      background: #f6f6fe;
+      padding: 8px 14px;
+      border-radius: 8px;
+      border-left: 4px solid var(--primary);
+      min-height: 32px;
+      font-style: italic;
+      width: 100%;
+      box-sizing: border-box;
+    }
+    .cbti-advice {
+      margin: 12px 0 0 0;
+      width: 100%;
+      text-align: center;
+    }
+    .btn-cbti {
+      background: var(--primary);
+      color: #fff;
+      font-weight: 600;
+      border: none;
+      border-radius: 10px;
+      padding: 10px 22px;
+      font-size: 1rem;
+      margin-top: 6px;
+      cursor: pointer;
+      box-shadow: 0 2px 8px rgba(103,81,239,0.07);
+      transition: background .13s;
+      letter-spacing: .2px;
+    }
+    .btn-cbti:hover {
+      background: var(--primary-dark);
+    }
+    .db-error {
+      min-height: 16px;
+      color: var(--danger);
+      margin: 12px 0 0 0;
+      font-weight: 500;
+      font-size: .98rem;
+      text-align: center;
+      letter-spacing: .18px;
+    }
+    .result-btn-group {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      gap: 13px;
+      margin-top: 22px;
+    }
+    .btn-main {
+      background: var(--primary);
+      color: #fff;
+      font-weight: 600;
+      border: none;
+      border-radius: 10px;
+      padding: 12px 0;
+      font-size: 1.08rem;
+      width: 100%;
+      cursor: pointer;
+      box-shadow: 0 2px 8px rgba(103,81,239,0.07);
+      transition: background .13s;
+      letter-spacing: .3px;
+    }
+    .btn-main:hover {
+      background: var(--primary-dark);
+    }
+    .btn-alt {
+      background: var(--blue);
+    }
+    .btn-alt:hover {
+      background: #2042b3;
+    }
+    @media (max-width: 520px) {
+      .result-card { padding: 16px 4vw 10px 4vw; }
+      .logo { width: 36px; height: 36px; }
+      .title { font-size: 1.09rem; }
+      .btn-main { font-size: .97rem; }
+      .tips-hasil { font-size: .96rem; padding: 7px 7px; }
+      .result-btn-group { gap: 8px; }
+    }
+  </style>
 </body>
 </html>
